--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jlskdf</title>
+    <title>PigLatin</title>
   </head>
   <body>
+
 
     <script src = "main.js"></script>
   </body>
